# karels-crypto-scraping

./: .gitignore  README.md  ROADMAP.md
.github/workflows/: benchmark.yml  cross-provider-benchmark.yml  ingest.yml  optimize.yml  provider-smoke.yml  recon.yml  reveal-analysis.yml  run-benchmark-once.yml  run-cross-provider-bc-once.yml  run-cross-provider-once.yml  run-experiments-once.yml  run-fullbench-once.yml  run-gepa-full-once.yml  run-gepa-once.yml  run-ingest-once.yml  run-optimize-5mini-once.yml  run-optimize-gpt4o-once.yml  run-optimize-once.yml  run-optimizers-smoke.yml  scrape.yml  smoke.yml
data/: history.json  latest.json
karels-crypto-scraping/: README.md  pyproject.toml
karels-crypto-scraping/data/: history.json  latest.json
karels-crypto-scraping/scripts/: recon.py  recon_graphql.py
karels-crypto-scraping/src/karels_crypto/: models.py  scraper.py
karels-crypto-scraping/tests/: test_scraper.py  test_transform.py
karels-crypto-scraping/tests/fixtures/: puzzles.json
karels-crypto-solving/: .env.example  README.md  model_registry.json  pyproject.toml
karels-crypto-solving/benchmark_results/: README.md  benchmark.json  benchmark.md
karels-crypto-solving/data/: _ingest_puzzles_raw.json  _ingest_solutions_raw.json  ingested_puzzles.json
karels-crypto-solving/optimization_results/: README.md  metrics.json  optimized_prompt.txt  optimized_word_solver.json
karels-crypto-solving/optimization_results/copro/: metrics.json  optimized_prompt.txt  optimized_word_solver.json
karels-crypto-solving/optimization_results/dspy_logs/evaluated_programs/: program_2.json
karels-crypto-solving/optimization_results/gepa/: metrics.json  optimized_prompt.txt  optimized_word_solver.json
karels-crypto-solving/optimization_results/mipro/: metrics.json
karels-crypto-solving/research/: REPORT.md  baseline_5p5.json  failures_gpt5mini.json  length_analysis_gpt5mini.json  preds_gpt5mini.json  summary.json  transfer_gepa_on_5p5.json  transfer_gepa_on_mini.json
karels-crypto-solving/research/capability/: benchmark.json  benchmark.md
karels-crypto-solving/research/capability_n300/: benchmark.json  benchmark.md
karels-crypto-solving/research/cross_provider/: benchmark.json  benchmark.md
karels-crypto-solving/research/cross_provider/tier_a/: benchmark.json  benchmark.md
karels-crypto-solving/research/cross_provider/tier_b/: benchmark.json  benchmark.md
karels-crypto-solving/research/cross_provider/tier_c/: benchmark.json  benchmark.md
karels-crypto-solving/research/human/: answer_key.json  human_benchmark_worksheet.csv
karels-crypto-solving/research/opt/copro/: metrics.json  optimized_prompt.txt  optimized_word_solver.json
karels-crypto-solving/research/opt/gepa/: metrics.json  optimized_prompt.txt  optimized_word_solver.json
karels-crypto-solving/research/opt/mipro/: metrics.json  optimized_prompt.txt  optimized_word_solver.json
karels-crypto-solving/research/reveal/: reveal_analysis.json  reveal_analysis.md
karels-crypto-solving/src/karels_crypto_solving/: __init__.py  benchmark.py  config.py  data.py  failure_analysis.py  human_benchmark.py  ingest.py  models.py  parse_models.py  patterns.py  pricing.py  prompts.py  providers.py  puzzle_solver.py  reveal_analysis.py  runner.py  word_solver.py
karels-crypto-solving/src/karels_crypto_solving/optimization/: README.md  __init__.py  evaluate_program.py  optimize.py  program.py
karels-crypto-solving/tests/: test_benchmark.py  test_data.py  test_failure_analysis.py  test_human_benchmark.py  test_ingest.py  test_models.py  test_parse_models.py  test_providers.py  test_reveal_analysis.py  test_utils.py
recon_output/: report.json
scripts/: recon.py  recon_graphql.py
src/karels_crypto/: __init__.py  (+3 more)
viz/: README.md  _shot.html  index.html  puzzle-charts.css  puzzle-charts.js
(+6 files in other folders)
